# protoCereal-go

./: .gitmodules  README.md  doc_api.go  go.mod  go.sum  makefile  pip-freeze.txt  setup.cfg  tools.go
cereal/: decimal.pb.go  decimalMethods.go  raw_data.pb.go  timeMethods.proto.go  uuid.pb.go  uuidMethods.go
cerealMessages/: decimal.pb.go  decimalMethods.go  raw_data.pb.go  timeMethods.proto.go  uuid.pb.go  uuidMethods.go
cerealMessages_test/: enum.pb.go  oneOfInterfaces.go  oneof.pb.go  test.pb.go
cereal_proto/: decimal.proto  raw_data.proto  test.proto  uuid.proto
cereal_test/: enum.pb.go  oneOfInterfaces.go  oneof.pb.go  test.pb.go
docs/: .buildinfo  genindex.html  index.html  mongo.html  objects.inv  search.html  searchindex.js
docsProto/: wizard.pb.go  wrappers.pb.go
messagesCereal/: decimal.pb.go  decimalMethods.go  raw_data.pb.go  timeMethods.proto.go  uuid.pb.go  uuidMethods.go
messagesCereal_test/: enum.pb.go  oneOfInterfaces.go  oneof.pb.go  test.pb.go
protoBSON/: any.go  any_test.go  decimal.go  decimal_test.go  enum_test.go  oneof_test.go  opts.go  rawData.go  rawData_test.go  registry.go  registry_test.go  timestamp.go  timestamp_test.go  uuid.go  uuid_test.go  wrapperGeneric.go  wrapperGeneric_test.go
protoBson/: any.go  any_test.go  decimal.go  decimal_test.go  enum_test.go  oneof_test.go  opts.go  opts_test.go  rawData.go  rawData_test.go  registry.go  registry_test.go  timestamp_test.go  uuid.go  uuid_test.go  wrapperGeneric.go  wrapperGeneric_test.go
protobson/: any.go  any_test.go  decimal.go  decimal_test.go  enum_test.go  oneof_test.go  (+10 more)
(+62 files in other folders)
