[version]
target = 0.2
release = 0.2.2

[metadata]
name = protoCereal
git_org = github.com/illuscio-dev

[testing]
coverage_required = 0.85
test_package = ./...
exclude = 
	./cereal
	./docsProto
	./cereal_test

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links = 

[docs.proto]
paths = 

[proto]
root_source_path = ./cereal_proto
root_go_package = github.com/illuscio-dev/protoCereal-go
python_output_path = 
python_import_original = 
python_import_replacement = 

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
build = 
	packaging
test = 

[build_sphinx]
project = protoCereal
copyright = '2020, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

